--- a/MediaToolkit/MediaToolkit.csproj
+++ b/MediaToolkit/MediaToolkit.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="MedallionShell" Version="1.6.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0-preview.5.20278.1" />
     <PackageReference Include="System.IO.Abstractions" Version="9.0.4" />
     <PackageReference Include="System.Text.Json" Version="4.6.0" />
   </ItemGroup>
