--- a/MediaToolkit/MediaToolkit.csproj
+++ b/MediaToolkit/MediaToolkit.csproj
@@ -1,17 +1,17 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <PackageId>MediaToolkit.NetCore</PackageId>
     <PackageDescription>MediaToolkit port to .Net Core</PackageDescription>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp5.0</TargetFramework>
+    <LangVersion>8.0</LangVersion>
     <RootNamespace>MediaToolkit</RootNamespace>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="MedallionShell" Version="1.6.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0-preview.5.20278.1" />
-    <PackageReference Include="System.IO.Abstractions" Version="9.0.4" />
-    <PackageReference Include="System.Text.Json" Version="4.6.0" />
+    <PackageReference Include="MedallionShell" Version="1.6.1"/>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.0"/>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0-preview.5.20278.1"/>
+    <PackageReference Include="System.IO.Abstractions" Version="9.0.4"/>
+    <PackageReference Include="System.Text.Json" Version="4.6.0"/>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3"/>
   </ItemGroup>
 </Project>
